--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,10 +19,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Dużurująca apteka w Strzelinie</title>
+    <title>Dyżurująca apteka w Strzelinie</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>
+      if(location.search) location.replace(location.href.replace(/\?.+/, ""));
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
