--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta name="description" content="Chcesz wiedzieć która apteka w Strzelinie jest otwarta?
+    Na tej stronie znajdziesz informację, która apteka pełni dyżur w Strzelinie. "/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -22,7 +20,8 @@
     <title>Dyżurująca apteka w Strzelinie</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Na tej stronie znajdziesz informacje, która apteka pełni w Strzelinie dyżur. Pamiętaj, że
+     potrzebujesz włączyć obsługę JavaScript, by stronia działała poprawnie</noscript>
     <script>
       if(location.search) location.replace(location.href.replace(/\?.+/, ""));
     </script>
