--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,21 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Chcesz wiedzieć która apteka w Strzelinie jest otwarta?
     Na tej stronie znajdziesz informację, która apteka pełni dyżur w Strzelinie. "/>
+    <meta name="keywords" content="apteka, dyżur, strzelin, dyżurująca">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta name="author" content="Wojciech Razik">
     <title>Dyżurująca apteka w Strzelinie</title>
   </head>
   <body>
     <noscript>Na tej stronie znajdziesz informacje, która apteka pełni w Strzelinie dyżur. Pamiętaj, że
-     potrzebujesz włączyć obsługę JavaScript, by stronia działała poprawnie</noscript>
+     potrzebujesz włączyć obsługę JavaScript, by strona działała poprawnie</noscript>
     <script>
       if(location.search) location.replace(location.href.replace(/\?.+/, ""));
     </script>
@@ -40,6 +33,7 @@
   <footer>
     <div class="autor">Wojciech Razik</div>
     <div class="email" user="wojciech.razik" domain="gmail.com"></div>
-    <div class="year">2022</div>
+    <div class="year">&copy; 2022</div>
+    <div class="comment">Слава Україні!</div>
   </footer>
 </html>
