--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,6 +33,7 @@
   <footer>
     <div class="autor">Wojciech Razik</div>
     <div class="email" user="wojciech.razik" domain="gmail.com"></div>
+    <div class="buycoffee"><a href="https://buycoffee.to/wrazik">Przydało się? Postaw kawę! </a></div>
     <div class="year">&copy; 2022</div>
     <div class="comment">Слава Україні!</div>
   </footer>
