--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="apteka, dyżur, strzelin, dyżurująca">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="author" content="Wojciech Razik">
+    <link rel="canonical" href="https://www.apteka-strzelin.pl/"> 
     <title>Dyżurująca apteka w Strzelinie</title>
   </head>
   <body>
